Feat #14 - JPA 적용 (권한 관리)
* 엔티티 설계
* 테스트 진행 (단위 테스트, 통합 테스트, View 연결)
* 사용자 및 권한 연계 / 메뉴 및 권한 연계